--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,7 +1,19 @@
 <header>
+    <img class="left" src="img/icon.png">
     <h1>{{title}}</h1>
 
     <a href="/">Weather</a>
     <a href="/about">About</a>
     <a href="/help">Help</a>
 </header>
+<head>
+    <style>
+body  {
+  background-image: url("img/sunny-day.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: center;
+}
+</style>
+</head>
