Made changes to about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,8 +8,11 @@
     <body>
         <div class='main-content'>
             {{>header}}
-            <p>This site was created by Aditya Vadalkar. Its uses data from mapbox.com and darksky.net</p>
             <img class="portrait" src="img/Aditya.jpg">
+            <p>Hi! I am Aditya Vadalkar and I am a keen Web Developer and a Blockchain enthusiast. Feel free to contact me by email. Let's collaborate!</p>
+            <p>Linkedin: www.linkedin.com/in/aditya-vadalkar-76a4b21a0</p>
+            <p>Github: https://github.com/adityavadalkar</p>
+            <p>Email: adityavadalkar@gmail.com</p>
         </div>
         {{>footer}}
     </body>
