Added necessary hyperlinks

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -2,9 +2,9 @@
     <img class="left" src="img/icon.png">
     <h1>{{title}}</h1>
 
-    <a href="/">Weather</a>
-    <a href="/about">About</a>
-    <a href="/help">Help</a>
+    <a href="/"><u>Weather</u></a>
+    <a href="/about"><u>About</u></a>
+    <a href="/help"><u>Help</u></a>
 </header>
 <head>
     <style>
