--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,8 +10,8 @@
             {{>header}}
             <img class="portrait" src="img/Aditya.jpg">
             <p>Hi! I am Aditya Vadalkar and I am a keen Web Developer and a Blockchain enthusiast. Feel free to contact me by email. Let's collaborate!</p>
-            <p>Linkedin: www.linkedin.com/in/aditya-vadalkar-76a4b21a0</p>
-            <p>Github: https://github.com/adityavadalkar</p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/aditya-vadalkar-76a4b21a0">linkedin.com/in/aditya-vadalkar-76a4b21a0</p></a>
+            <p>Github: <a href="https://github.com/adityavadalkar">https://github.com/adityavadalkar</p></a>
             <p>Email: adityavadalkar@gmail.com</p>
         </div>
         {{>footer}}
