--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -9,6 +9,7 @@
         <div class="main-content">
             {{>header}}
             <p>{{helpText}}</p>
+            <p>{{ help }}</p>
         </div>
         
         {{>footer}}
